; ModuleID = '/home/carl/AnghaBench/libgit2/tests/blame/extr_simple.c_test_blame_simple__trivial_blamerepo.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/blame/extr_simple.c_test_blame_simple__trivial_blamerepo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"blametest.git\00", align 1
@g_blame = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"b.txt\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"da237394\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"b99f7ac0\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"63d671eb\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"aa06ecca\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_blame_simple__trivial_blamerepo() #0 {
  %1 = call i32 @cl_fixture(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @git_repository_open(i32* @g_repo, i32 %1)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load i32, i32* @g_repo, align 4
  %5 = call i32 @git_blame_file(i32* @g_blame, i32 %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @g_blame, align 4
  %8 = call i32 @git_blame_get_hunk_count(i32 %7)
  %9 = call i32 @cl_assert_equal_i(i32 4, i32 %8)
  %10 = load i32, i32* @g_repo, align 4
  %11 = load i32, i32* @g_blame, align 4
  %12 = call i32 @check_blame_hunk_index(i32 %10, i32 %11, i32 0, i32 1, i32 4, i32 0, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %13 = load i32, i32* @g_repo, align 4
  %14 = load i32, i32* @g_blame, align 4
  %15 = call i32 @check_blame_hunk_index(i32 %13, i32 %14, i32 1, i32 5, i32 1, i32 1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %16 = load i32, i32* @g_repo, align 4
  %17 = load i32, i32* @g_blame, align 4
  %18 = call i32 @check_blame_hunk_index(i32 %16, i32 %17, i32 2, i32 6, i32 5, i32 0, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %19 = load i32, i32* @g_repo, align 4
  %20 = load i32, i32* @g_blame, align 4
  %21 = call i32 @check_blame_hunk_index(i32 %19, i32 %20, i32 3, i32 11, i32 5, i32 0, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32*, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @git_blame_file(i32*, i32, i8*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_blame_get_hunk_count(i32) #1

declare dso_local i32 @check_blame_hunk_index(i32, i32, i32, i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
